# goodman_pipeline

./: .coveragerc  .gitignore  .gitmodules  .readthedocs.yml  .travis.yml  CHANGES.md  Gemfile  LICENCE  LICENSE  MANIFEST  MANIFEST.in  Makefile  OVERVIEW.md  README.html  README.md  README.rst  README.txt  __init__.py  _config.yml  beta1_bug.patch  data-request.md  developing.md  docs.html  environment.yml  genindex.html  gmremove.cl  goodman_ccd.html  goodman_modes.md  goodman_spec.html  index.html  install_dcr.sh  linelist.html  linelist.py  modules.html  modules.rst  objects.inv  page_structure.txt  params.json  process.html  process.py  (+28 more)
.github/workflows/: python-package-conda.yml  python-package.yml  python-publish.yml
_data/: navigation.yml
_modules/: index.html
_modules/goodman_ccd/: core.html  data_classifier.html  flat_arcorrection.html  goodman_ccd.html  goodman_ccdreduction.html  image_processor.html  night_organizer.html
_modules/goodman_spec/: linelist.html  process.html  redspec.html  wavelength.html  wsbuilder.html
_pages/: 00_requirements.md  01_download.md  01_get.md  02_install.md  03_run.md  03_test.md  about.md  home.md  portfolio.html
_sources/: README.rst.txt  README.txt  goodman_ccd.rst.txt  index.txt
dcr/: dcr.Centos7  dcr.MacOSSierra  dcr.Solaris11  dcr.Ubuntu16.04
dev/: GoodmanGUI.py
dev-tools/: ccd-list-based.py  extract_lamps.py  linelist_maker.py  new_keywords.md  plot-fits-file.py  ref_lamp_wav_refitter.py  scratch1.py  scratch2.py  simulator.py
dev-tools/telemetry/: core.py  listen_telemetry.py
dev-tools/tools/: aller_diagnostics.py  check_lamplib_completness.py  extract_lamps.py  line_matcher.py
docs/: Makefile  README.rst  _acknowledgement.rst  _common_issues.rst  _conclusion_acknowledgement.rst  _conclusion_team.rst  _cosmic_ray_removal.rst  _data_requirements.rst  _extraction_methods.rst  _file_prefixes.rst  _file_suffixes.rst  _flat_normalization.rst  _install_dcr.rst  _intro_license.rst  _observing.rst  _plotting.rst  _requirements_data.rst  _requirements_software.rst  _running_new_keywords.rst  _running_prepare_data_for_reduction.rst  _running_redastrometry.rst  _running_redccd.rst  _running_redphotometry.rst  _running_redspec.rst  _shortcuts.rst  _working_with_virtualenv.rst  about.rst  acknowledgement.rst  authors.rst  change_history.rst  conclusion.rst  conf.py  docs.md  goodman.core.rst  goodman.images.rst  goodman.rst  goodman.spectroscopy.rst  header_history.rst  index.html  index.rst  (+15 more)
docs/_build/: .buildinfo  _conclusion_acknowledgement.html  _conclusion_known_issues.html  _conclusion_performance.html  _intro_features_available.html  _intro_future_implementation.html  _intro_license.html  _intro_overview.html  _intro_supported_data.html  _requirements_data.html  _requirements_software.html  _running_new_keywords.html  _running_prepare_data_for_reduction.html  _running_redccd.html  _running_redspec.html  _running_working_with_virtualenv.html  conclusion.html  genindex.html  index.html  introduction.html  objects.inv  requirements.html  running_pipeline.html  search.html  searchindex.js  user_manual.html
docs/_sources/: README.txt  interactive-test.txt  redspec.txt  tc_read_IRAF_spec.txt
docs/_templates/: footer.html
docs/api/: goodman_pipeline.core.rst  goodman_pipeline.core.tests.rst  goodman_pipeline.images.rst  goodman_pipeline.images.tests.rst  goodman_pipeline.rst  goodman_pipeline.spectroscopy.rst  goodman_pipeline.spectroscopy.tests.rst  goodman_pipeline.wcs.rst  goodman_pipeline.wcs.tests.rst  modules.rst  pipeline.core.rst  pipeline.core.tests.rst  pipeline.images.rst  pipeline.images.tests.rst  pipeline.rst  pipeline.spectroscopy.rst  pipeline.tools.reference_lamp_factory.rst  pipeline.tools.reference_lamp_factory.tests.rst  pipeline.tools.rst  pipeline.tools.tests.rst  pipeline.wcs.rst
docs/developer_manual/: conf.py  vnc_setup.rst
docs/diagram-workflow/: new-proposed.xml
docs/doctrees/: README.doctree  README2.doctree  dev.display.doctree  dev.doctree  environment.pickle  goodman_ccd.doctree  goodman_spec.doctree  redgoodman.doctree
docs/img/: lst
doctrees/: README.doctree  environment.pickle  goodman_ccd.display.doctree  goodman_ccd.doctree  goodman_spec.doctree  index.doctree  linelist.doctree  modules.doctree  process.doctree  redgoodman.doctree  redspec.doctree  setup.doctree  wavelength.doctree  wsbuilder.doctree
goodman/: GUI_test.py  __init__.py  simulation_test.py  simulator_2.py  tc_autocalibration.py  test-02.py  test-03.py  test0.py  test00.py  test01.py  wsbuilder.py
goodman_ccd/: __init__.py  configuration_catalog.py  core.py  data_classifier.py  fix_header.py  flat_arcorrection.py  goodman_ccd.py  goodman_ccdreduction.py  image_processor.py  night_organizer.py  wavmode_translator.py
goodman_pipeline/: __init__.py  version.py
goodman_spec/: __init__.py  id_and_extract.py  linelist.py  optimal_extraction.py  process.py  redspec.py  simulator.py  wavelength.py  wsbuilder.py
html/: .buildinfo  README.html  genindex.html  goodman_ccd.html  goodman_spec.html  index.html  linelist.html  modules.html  objects.inv  process.html  py-modindex.html  redgoodman.html  redspec.html  search.html  searchindex.js  wavelength.html  wsbuilder.html
latex/: GoodmanSpectroscopicTools.tex
pipeline/: __init__.py  goodman_comp_1200M3_CuHeAr.fits  goodman_comp_1200M3_FeHeAr.fits  info.py  version.py
refdata/: Ar_3000A-10000A_clean.csv  Cu_3000A-10000A_clean.csv  HeNeAr_noao.fits  He_3000A-10000A_clean.csv  Hg_3000A-10000A_clean.csv  Ne_3000A-10000A_clean.csv  cuhear_reference_noao.fits  goodman_comp_400M2_GG455.fits  goodman_comp_400M2_GG455_HgArNe.fits  goodman_comp_600M0_CuHeAr.fits  lamps_library.txt
source/: conf.py
src/: __init__.py
telemetry/: create_table.sql
tests/: test_dummy.py  test_redspec.py  test_script.py  test_wavelength.py
(+594 files in other folders)
