[build_docs]
source_dir = docs
build_dir = docs/_build
all_files = 1

[build_sphinx]
project = 'Goodman Pipeline'
source_dir = docs
build_dir = docs/_build

[upload_docs]
upload_dir = docs/_build/html
show_response = 1

[metadata]
package_name = goodman_pipeline
description = Pipeline for reducing Goodman HTS data.
long_description = Provides everything need to reduce Goodman High Throughput Spectrograph data.
author = Simón Torres
author_email = simon.torres@noirlab.edu
license = BSD-3-Clause
# url =
edit_on_github = False
github_project = soar-telescope/goodman_pipeline

# version should be PEP440 compatible (http://www.python.org/dev/peps/pep-0440)
version = 1.3.2

[options]
zip_safe = False
include_package_data = True
packages = find:
python_requires = >=3.6
setup_requires = setuptools_scm
install_requires =
    numpy
    pandas
    matplotlib
    scipy
    cython
    astropy
    ccdproc
    astroplan

# [options.entry_points]
# console_scripts =
#     astropy-package-template-example = packagename.example_mod:main

[options.extras_require]
test =
    requests
docs =
    sphinx-astropy
    
# version should be PEP440 compatible (http://www.python.org/dev/peps/pep-0440)
version = 1.3.8
